# P6

./: .gitignore  CONTRIBUTORS.md  README.md  loinc_entries.txt  loinc_fetal_biometry_descriptors.txt  loinc_fetal_biometry_lookup.py  loinc_fetal_biometry_organized_entries_1.json  loinc_fetal_biometry_organized_entries_2.json  loinc_fetal_biometry_organized_entries_3.json  loinc_fetal_biometry_organized_entries_v1.csv  loinc_fetal_biometry_organized_entries_v2.csv  loinc_fetal_biometry_organized_entries_v3.csv  loinc_fetal_biometry_organized_entries_v4.csv  loinc_fetal_biometry_organized_entries_v5.csv  loinc_fetal_biometry_remote_query.py  loinc_fetal_biometry_table_query.py  loinc_lookup.py  loinc_lookup_results.csv  pyproject.toml  ruff.toml  setup.cfg
.github/actions/setup_env/: action.yaml
.github/workflows/: ci.yaml
requirements/: environment.yml  requirements.txt  requirements_scripts.txt  requirements_test.txt
src/P6/: __main__.py  biosample.py  disease.py  genotype.py  loader.py  mapper.py  measurement.py  periodicity.py  phenotype.py  sample.py  vv_lookup.py
src/P6/scripts/: __main__.py
tests/: conftest.py  test_cli_audit_excel.py  test_cli_parse_excel.py  test_download_mock.py  test_full_features.py  test_genotype.py  test_main_helpers.py  test_mapper.py  test_mapper_apply_construct.py  test_mapper_check_hgvs.py  test_mapper_choose_aliases.py  test_mapper_map_tables_required_columns.py  test_mapper_parse_genotype_row.py  test_mapper_parse_phenotype_row.py  test_mapper_utils.py  test_periodicity.py  test_phenotype.py  test_preprocess.py  test_sample.py
tests/data/: Berlin_Python_transformation.xlsx  NewYork_Python_transformation.xlsx  Python_headers_phenocopy_transformation.xlsx  Sydney_Python_transformation.xlsx  geno-base.obo
