[build-system]
requires = ["setuptools>=65.6.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "P6"
version = "0.1.0"
# version              = { attr = "P6.__version__" }
description = "A toolkit for working with the `PreGen` repository at the University of New South Wales under Dr. Tony Roscioli"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Varenya Jain", email = "varenyajj@gmail.com" }]
classifiers = [
   "Programming Language :: Python :: 3.13",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.10",
   "License :: OSI Approved :: AGPL-3.0 License",
   "Operating System :: OS Independent",
]
keywords = [
   "Global Alliance for Genomics and Health",
   "Human Phenotype Ontology",
   "Fetal Sequencing Consortium",
]


[project.urls]
homepage = "https://github.com/VarenyaJ/P6"
repository = "https://github.com/VarenyaJ/P6.git"
documentation = "https://github.com/VarenyaJ/P6.git"
bugtracker = "https://github.com/VarenyaJ/P6/issues"

[project.scripts]
P6 = "P6.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.dynamic]
# version = { attr = "project_name._version.version" }
# dependencies = {file = ["requirements/requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
