[metadata]
name = P6
version = attr: P6.__version__
description = A tooklit for working with the `PreGen` repository at the University of New South Wales under Dr. Tony Roscioli
long_description = file: README.md
long_description_content_type = text/markdown
author = Varenya Jain
author_email = varenyajj@gmail.com
license = MIT
url = https://github.com/VarenyaJ/P6
classifiers =
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: GNU Affero General Public License    
    Operating System :: OS Independent
keywords =
    Global Alliance for Genomics and Health
    GA4GH
    Human Phenotype Ontology
    HPO
    Prenatal
    Fetal Sequencing Consortium

project_urls
homepage                    = https://github.com/VarenyaJ/P6
repository                  = https://github.com/VarenyaJ/P6.git
documentation               = https://github.com/VarenyaJ/P6.git
bugtracker                  = https://github.com/VarenyaJ/P6/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.13
include_package_data = True
# core runtime deps, pulled from requirements/requirements.txt
install_requires =
    phenopackets==2.0.2.post4
    protobuf==3.20.3
    jupyterlab==4.4.4
    ipykernel==6.29.5
    openpyxl==3.1.5
    pandas==2.3.1
    hpo-toolkit==0.7.0
python_requires = >=3.13
include_package_data = True

[options.extras_require]
# for CLI‐script users, pulled from requirements/requirements_scripts.txt
scripts =
    click==8.2.1
    GitPython==3.1.44
    requests==2.32.4
    biopython==1.85
# for running tests & formatting, pulled from requirements/requirements_test.txt
test =
    pytest==8.4.0
    ruff==0.12.1

[options.entry_points]
console_scripts =
    p6 = P6.scripts.__main__:main
